# dotfiles

./: .gitignore  .luarc.json  .pre-commit-config.yaml  CLAUDE.md  README.md  bootstrap.sh  dots.lua  dots.sh  install.py  install.sh
cli/: Cargo.toml  clippy.toml
cli/crates/cc-hooks/: Cargo.toml
cli/crates/cc-hooks/src/: argv.rs  engine.rs  envelope.rs  lib.rs  main.rs  outcome.rs  rules.rs
cli/crates/cc-hooks/src/common/: mod.rs  outcome.rs
cli/crates/cc-hooks/src/pretool/: argv.rs  engine.rs  envelope.rs  mod.rs  rules.rs
cli/crates/cc-hooks/tests/: e2e_bash_guard.rs  e2e_pretool.rs  e2e_production_rules.rs
cli/crates/dots/: Cargo.toml
cli/crates/dots-core/: Cargo.toml
cli/crates/dots-core/src/: fs.rs  layer.rs  lib.rs  manifest.rs  plan.rs  resolve.rs  scripts.rs  types.rs
cli/crates/dots/src/: cli.rs  exec.rs  hooks.rs  hosts.rs  inject.rs  lib.rs  main.rs  onboard.rs  realfs.rs  render.rs  secret.rs  shellenv.rs  state.rs
cli/crates/dots/src/cmd/: adopt.rs  bootstrap.rs  completions.rs  doctor.rs  mod.rs  secret.rs  status.rs  sync.rs  undo.rs  unlink.rs
cli/crates/dots/src/lua/: api.rs  eval.rs  mod.rs  primitives.rs
cli/crates/dots/tests/: e2e_sync.rs
cli/lua-api/: dots.meta.lua
common/vscode/User/: keybindings.json  settings.json
docs/: AI_TOOLING.md  LUA_API.md  MANUAL_SETUP.md  PKG_MANAGEMENT.md  README.md
docs/superpowers/specs/: 2026-06-06-dots-cli-design.md  2026-06-06-lua-hooks-redesign-design.md  2026-06-28-display-panel-redesign-design.md
general/: .alias  .p10k.zsh  .vimrc  .zshrc.template  .zshrc_dotfiles.template
general/.config/: starship.toml
general/.config/btop/: btop.conf
general/.config/kitty/: basic.conf  current-theme.conf  kitty.conf
general/.config/nvim/: init.lua
general/.config/opencode/: opencode.json
general/.config/yazi/: keymap.toml  package.toml  theme-dark.toml  yazi.toml
general/.config/zellij/: config.kdl
general/skills/: skill-creator
general/skills/ai-friendly-frontend/: SKILL.md
general/skills/deep-tutorial-writer/: SKILL.md
general/skills/doc-comment-adder/: SKILL.md
general/skills/doc-markdown-html/: SKILL.md  test-dark-mode.md  test.html  test.md
general/skills/feitu-trading-terminal-v3-10/: SKILL.md
general/skills/frontend-react/: SKILL.md
general/skills/gen-test-plan/: SKILL.md  reference.md
general/skills/gh-cli/: SKILL.md
general/skills/page-behavior-indexer/: SKILL.md
general/skills/po-binding-playwright/: SKILL.md
general/skills/po-fixture-indexer/: SKILL.md
general/skills/quickshell/: SKILL.md
general/skills/shared/: test-ir-spec.md
general/skills/test-intent-parser/: SKILL.md
general/skills/testid-adder/: SKILL.md
general/skills/tui/: SKILL.md
linux/: .zshrc_linux  pacman.txt
linux/.config/hypr/: appearances.conf  exec.conf  hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf  keybindings.conf  screen-effects.glsl.template
linux/.config/kitty/: current-theme.conf  kitty.conf  victor_font_linux.conf
linux/.config/niri/: config.kdl
linux/.config/quickshell/: .qmlls.ini  EffectSlider.qml  PresetButton.qml  ScreenEffectsPanel.qml  shell.qml
linux/.config/waybar/: config.jsonc  style.css
linux/.config/xremap/: config.yml
linux/scripts/: connectBSU.sh  launch_yazi.sh  media_volume.sh  network_status.sh  plasma
linux/scripts/hypr/: focus_mode.sh  hyprshutdown  keybindings_cheatsheet.sh  keyboard_manager.sh  layout_dispatch.sh  monitor_profile.sh  (+10 more)
linux/systemd/: keyboard-inhibit-sync.service
linux/udev/: 99-keyboard-inhibit.rules
macos/: .zshrc_macos  Brewfile
scripts/: pkg-export  pkg-install
scripts/common/: bsu_login.py  cc-hook-test
system/systemd/: keyboard-inhibit-sync.service
system/udev/: 99-keyboard-inhibit.rules
tree/home/: .alias  .gitconfig  .zshrc_dotfiles
tree/home.macos/: .zshrc_macos
(+468 files in other folders)
