[package]
name         = "dots-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
serde       = { workspace = true }
rustc-hash  = { workspace = true }
color-eyre  = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }

[lints]
workspace = true
